<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pascal.auclair.pascal_01.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never">
    </item>
	<item
		android:id="@+id/apropos"
		android:orderInCategory="100"
		android:title="@string/apropos"
		app:showAsAction="never">
	</item>
    	<item
		android:id="@+id/horloges"
		android:orderInCategory="100"
		android:title="@string/horloge"
		app:showAsAction="never">
	</item>
		<item
		android:id="@+id/calendrier"
		android:orderInCategory="100"
		android:title="@string/calendrier"
		app:showAsAction="never" >
	</item>
		<item
		android:id="@+id/camera"
		android:orderInCategory="100"
		android:title="@string/camera"
		app:showAsAction="never" >
	</item>
			
</menu>
